--- a/style/main.scss
+++ b/style/main.scss
@@ -317,7 +317,7 @@ hr {
   .tile-inner {
     border-radius: $tile-border-radius;
 
-    background: $tile-color;
+    background: $tile-color no-repeat center center;
     text-align: center;
     font-weight: bold;
     z-index: 10;
@@ -372,7 +372,8 @@ hr {
 
       // Set background
       background: $mixed-background;
-
+      background-position: center center;
+      background-repeat: no-repeat;
       // Add glow
       $glow-opacity: max($exponent - 4, 0) / ($limit - 4);
 
