move final elements to special block

--- a/style/main.css
+++ b/style/main.css
@@ -313,91 +313,14 @@ hr {
   transition-property: transform; }
   .tile .tile-inner {
     border-radius: 3px;
-    background: #eee4da no-repeat center center;
+    background: #C9BBAD no-repeat center center;
     text-align: center;
     font-weight: bold;
     z-index: 10;
     font-size: 55px; }
-  .tile.tile-2 .tile-inner {
-    background: #eee4da;
-    background-position: center center;
-    background-repeat: no-repeat;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
-  .tile.tile-4 .tile-inner {
-    background: #ede0c8;
-    background-position: center center;
-    background-repeat: no-repeat;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
-  .tile.tile-8 .tile-inner {
-    color: #f9f6f2;
-    background: #f2b179;
-    background-position: center center;
-    background-repeat: no-repeat; }
-  .tile.tile-16 .tile-inner {
-    color: #f9f6f2;
-    background: #f59563;
-    background-position: center center;
-    background-repeat: no-repeat; }
-  .tile.tile-32 .tile-inner {
-    color: #f9f6f2;
-    background: #f67c5f;
-    background-position: center center;
-    background-repeat: no-repeat; }
-  .tile.tile-64 .tile-inner {
-    color: #f9f6f2;
-    background: #f65e3b;
-    background-position: center center;
-    background-repeat: no-repeat; }
-  .tile.tile-128 .tile-inner {
-    color: #f9f6f2;
-    background: #edcf72;
-    background-position: center center;
-    background-repeat: no-repeat;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
-    font-size: 45px; }
-    @media screen and (max-width: 520px) {
-      .tile.tile-128 .tile-inner {
-        font-size: 25px; } }
-  .tile.tile-256 .tile-inner {
-    color: #f9f6f2;
-    background: #edcc61;
-    background-position: center center;
-    background-repeat: no-repeat;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
-    font-size: 45px; }
-    @media screen and (max-width: 520px) {
-      .tile.tile-256 .tile-inner {
-        font-size: 25px; } }
-  .tile.tile-512 .tile-inner {
-    color: #f9f6f2;
-    background: #edc850;
-    background-position: center center;
-    background-repeat: no-repeat;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
-    font-size: 45px; }
-    @media screen and (max-width: 520px) {
-      .tile.tile-512 .tile-inner {
-        font-size: 25px; } }
-  .tile.tile-1024 .tile-inner {
-    color: #f9f6f2;
-    background: #edc53f;
-    background-position: center center;
-    background-repeat: no-repeat;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
-    font-size: 35px; }
-    @media screen and (max-width: 520px) {
-      .tile.tile-1024 .tile-inner {
-        font-size: 15px; } }
-  .tile.tile-2048 .tile-inner {
-    color: #f9f6f2;
-    background: #edc22e;
-    background-position: center center;
-    background-repeat: no-repeat;
-    box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
-    font-size: 35px; }
-    @media screen and (max-width: 520px) {
-      .tile.tile-2048 .tile-inner {
-        font-size: 15px; } }
+    .tile .tile-inner span.title {
+      font-size: 16px;
+      line-height: 190px; }
   .tile.tile-super .tile-inner {
     color: #f9f6f2;
     background: #3c3a32;
@@ -743,3 +666,45 @@ hr {
     margin-top: 90px !important; }
   .game-message .lower {
     margin-top: 30px !important; } }
+.final-wrapper {
+  border: 12px solid #bbada0;
+  background-color: #C9BBAD;
+  border-radius: 4px;
+  float: left;
+  margin-left: -160px;
+  margin-top: 46px; }
+  .final-wrapper .final-container {
+    height: 464px;
+    width: 107px;
+    overflow: hidden; }
+    .final-wrapper .final-container ul {
+      padding: 0px;
+      margin: 0px; }
+      .final-wrapper .final-container ul li.tile {
+        position: inherit;
+        background-color: #edc22e;
+        list-style: none;
+        border-bottom: 12px solid #bbada0; }
+        .final-wrapper .final-container ul li.tile .tile-inner {
+          background-color: transparent; }
+          .final-wrapper .final-container ul li.tile .tile-inner span.count {
+            font-size: 16px;
+            display: table-cell;
+            line-height: 25px;
+            padding-left: 4px; }
+          .final-wrapper .final-container ul li.tile .tile-inner span.title {
+            line-height: 145px; }
+      .final-wrapper .final-container ul li.tile:first-child {
+        border-top: 12px solid #bbada0; }
+      .final-wrapper .final-container ul li.tile:last-child {
+        border-bottom: 12px solid #bbada0; }
+  .final-wrapper .arrow_up {
+    width: 35px;
+    height: 30px;
+    background: #bbada0;
+    margin: -30px auto 0 auto; }
+  .final-wrapper .arrow_down {
+    width: 35px;
+    height: 30px;
+    background: #bbada0;
+    margin: 0 auto -30px auto; }
